// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Balance sheet tests Balance sheet page displays an empty view when no enough data is available 1`] = `
<div
  class="sc-iqseJM krxsxy"
  data-testid="scrollview-balance-sheet"
>
  <header
    class="sc-crHmcD chJYcV"
  >
    <div
      class="sc-fFeiMQ fIMGLX"
    >
      <div
        class="sc-egiyK hGPUxh"
      >
        <h1
          class="sc-bqiRlB dMSeEr"
          title="Balance sheet"
        >
          Balance sheet
        </h1>
      </div>
      <nav>
        <div
          class="sc-ikJyIC eZSpvY"
        >
          <button
            class="sc-kLwhqv kKDXNw"
            type="button"
          >
            Add new
          </button>
          <button
            class="sc-kLwhqv kKDXNw"
            type="button"
          >
            Import
          </button>
        </div>
      </nav>
    </div>
  </header>
  <main
    class="sc-hBUSln VoEdK"
  >
    <div
      class="sc-eCImPb kAAJDj"
    >
      <header
        class="sc-jRQBWg gVqNsd"
      >
        <h2
          class="sc-gKclnd NOdWh"
        >
          Balances
        </h2>
        <div>
          <nav
            class="sc-iCfMLu bwqJIX"
          >
            <div
              class="sc-furwcr bbwRoh"
            >
              all 
            </div>
            <div
              class="sc-furwcr nEOmy"
            >
              accounts 1
            </div>
            <div
              class="sc-furwcr nEOmy"
            >
              assets 0
            </div>
          </nav>
        </div>
      </header>
      <div
        class="sc-efQSVx cUhjik"
      >
        <div
          class="sc-iAKWXU dVBxey"
          data-testid="balance-group-cash"
        >
          <div
            class="sc-bdvvtL gvuwTi"
          >
            <p
              class="sc-gsDKAQ dLMLA-d"
            >
              Cash
            </p>
            <span
              appearance="1"
              class="sc-hKwDye emcqkd"
            >
              $0
            </span>
          </div>
          <div
            class="sc-hiCibw jktFQO"
          >
            <div
              class="sc-gWXbKe cgurVW"
            >
              <div
                class="sc-cidDSM ccUmfv"
              >
                undefined
              </div>
              <span
                class="sc-jcFjpl jLBuyl"
              >
                $0
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/account/Alice's Checking"
                >
                  Alice's Checking
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                $0
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-iAKWXU dVBxey"
          data-testid="balance-group-debt"
        >
          <div
            class="sc-bdvvtL gLywDe"
          >
            <p
              class="sc-gsDKAQ dLMLA-d"
            >
              Debt
            </p>
            <span
              appearance="2"
              class="sc-hKwDye emcqkd"
            >
              $0
            </span>
          </div>
          <div
            class="sc-ezbkAF igaVSX"
          >
            No balances are available in this group
          </div>
        </div>
        <div
          class="sc-iAKWXU dVBxey"
          data-testid="balance-group-investments"
        >
          <div
            class="sc-bdvvtL hRryZV"
          >
            <p
              class="sc-gsDKAQ dLMLA-d"
            >
              Investments
            </p>
            <span
              appearance="3"
              class="sc-hKwDye emcqkd"
            >
              $0
            </span>
          </div>
          <div
            class="sc-ezbkAF igaVSX"
          >
            No balances are available in this group
          </div>
        </div>
        <div
          class="sc-iAKWXU dVBxey"
          data-testid="balance-group-other-assets"
        >
          <div
            class="sc-bdvvtL cPSxPD"
          >
            <p
              class="sc-gsDKAQ dLMLA-d"
            >
              Other assets
            </p>
            <span
              appearance="4"
              class="sc-hKwDye emcqkd"
            >
              $0
            </span>
          </div>
          <div
            class="sc-ezbkAF igaVSX"
          >
            No balances are available in this group
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`Balance sheet tests Balance sheet page displays the correct data 1`] = `
<div
  class="sc-iqseJM krxsxy"
  data-testid="scrollview-balance-sheet"
>
  <header
    class="sc-crHmcD chJYcV"
  >
    <div
      class="sc-fFeiMQ fIMGLX"
    >
      <div
        class="sc-egiyK hGPUxh"
      >
        <h1
          class="sc-bqiRlB dMSeEr"
          title="Balance sheet"
        >
          Balance sheet
        </h1>
      </div>
      <nav>
        <div
          class="sc-ikJyIC eZSpvY"
        >
          <button
            class="sc-kLwhqv kKDXNw"
            type="button"
          >
            Add new
          </button>
          <button
            class="sc-kLwhqv kKDXNw"
            type="button"
          >
            Import
          </button>
        </div>
      </nav>
    </div>
  </header>
  <main
    class="sc-hBUSln VoEdK"
  >
    <div
      class="sc-eCImPb kAAJDj"
    >
      <header
        class="sc-jRQBWg gVqNsd"
      >
        <h2
          class="sc-gKclnd NOdWh"
        >
          Balances
        </h2>
        <div>
          <nav
            class="sc-iCfMLu bwqJIX"
          >
            <div
              class="sc-furwcr bbwRoh"
            >
              all 
            </div>
            <div
              class="sc-furwcr nEOmy"
            >
              accounts 7
            </div>
            <div
              class="sc-furwcr nEOmy"
            >
              assets 6
            </div>
          </nav>
        </div>
      </header>
      <div
        class="sc-efQSVx cUhjik"
      >
        <div
          class="sc-iAKWXU dVBxey"
          data-testid="balance-group-cash"
        >
          <div
            class="sc-bdvvtL gvuwTi"
          >
            <p
              class="sc-gsDKAQ dLMLA-d"
            >
              Cash
            </p>
            <span
              appearance="1"
              class="sc-hKwDye emcqkd"
            >
              $10,700
            </span>
          </div>
          <div
            class="sc-hiCibw jktFQO"
          >
            <div
              class="sc-gWXbKe cgurVW"
            >
              <div
                class="sc-cidDSM ccUmfv"
              >
                savings
              </div>
              <span
                class="sc-jcFjpl jLBuyl"
              >
                $6,000
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/account/Emergency Fund"
                >
                  Emergency Fund
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                $6,000
              </span>
            </div>
          </div>
          <div
            class="sc-hiCibw jktFQO"
          >
            <div
              class="sc-gWXbKe cgurVW"
            >
              <div
                class="sc-cidDSM ccUmfv"
              >
                checking
              </div>
              <span
                class="sc-jcFjpl jLBuyl"
              >
                $3,400
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/account/Alice's Checking"
                >
                  Alice's Checking
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                $3,400
              </span>
            </div>
          </div>
          <div
            class="sc-hiCibw jktFQO"
          >
            <div
              class="sc-gWXbKe cgurVW"
            >
              <div
                class="sc-cidDSM ccUmfv"
              >
                cash
              </div>
              <span
                class="sc-jcFjpl jLBuyl"
              >
                $1,300
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/account/Wallet"
                >
                  Wallet
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                $1,300
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-iAKWXU dVBxey"
          data-testid="balance-group-debt"
        >
          <div
            class="sc-bdvvtL gLywDe"
          >
            <p
              class="sc-gsDKAQ dLMLA-d"
            >
              Debt
            </p>
            <span
              appearance="2"
              class="sc-hKwDye emcqkd"
            >
              -$21,974
            </span>
          </div>
          <div
            class="sc-hiCibw jktFQO"
          >
            <div
              class="sc-gWXbKe cgurVW"
            >
              <div
                class="sc-cidDSM ccUmfv"
              >
                credit card
              </div>
              <span
                class="sc-jcFjpl jLBuyl"
              >
                -$724
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/account/Bob's Juggernaut Visa"
                >
                  Bob's Juggernaut Visa
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                -$724
              </span>
            </div>
          </div>
          <div
            class="sc-hiCibw jktFQO"
          >
            <div
              class="sc-gWXbKe cgurVW"
            >
              <div
                class="sc-cidDSM ccUmfv"
              >
                auto
              </div>
              <span
                class="sc-jcFjpl jLBuyl"
              >
                -$21,250
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/account/Toyota Auto Loan"
                >
                  Toyota Auto Loan
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                -$21,250
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-iAKWXU dVBxey"
          data-testid="balance-group-investments"
        >
          <div
            class="sc-bdvvtL hRryZV"
          >
            <p
              class="sc-gsDKAQ dLMLA-d"
            >
              Investments
            </p>
            <span
              appearance="3"
              class="sc-hKwDye emcqkd"
            >
              $142,831
            </span>
          </div>
          <div
            class="sc-hiCibw jktFQO"
          >
            <div
              class="sc-gWXbKe cgurVW"
            >
              <div
                class="sc-cidDSM ccUmfv"
              >
                cryptocurrency
              </div>
              <span
                class="sc-jcFjpl jLBuyl"
              >
                $86,920
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/asset/Bitcoin"
                >
                  Bitcoin
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Asset
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                $69,420
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/asset/Ethereum"
                >
                  Ethereum
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Asset
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                $17,500
              </span>
            </div>
          </div>
          <div
            class="sc-hiCibw jktFQO"
          >
            <div
              class="sc-gWXbKe cgurVW"
            >
              <div
                class="sc-cidDSM ccUmfv"
              >
                security
              </div>
              <span
                class="sc-jcFjpl jLBuyl"
              >
                $33,125
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/asset/Tesla"
                >
                  Tesla
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Asset
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                $30,000
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/asset/GameStop"
                >
                  GameStop
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Asset
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                $3,125
              </span>
            </div>
          </div>
          <div
            class="sc-hiCibw jktFQO"
          >
            <div
              class="sc-gWXbKe cgurVW"
            >
              <div
                class="sc-cidDSM ccUmfv"
              >
                roth
              </div>
              <span
                class="sc-jcFjpl jLBuyl"
              >
                $18,536
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/account/Alice's Roth IRA"
                >
                  Alice's Roth IRA
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                $18,536
              </span>
            </div>
          </div>
          <div
            class="sc-hiCibw jktFQO"
          >
            <div
              class="sc-gWXbKe cgurVW"
            >
              <div
                class="sc-cidDSM ccUmfv"
              >
                401k
              </div>
              <span
                class="sc-jcFjpl jLBuyl"
              >
                $4,251
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/account/Bob's 401k"
                >
                  Bob's 401k
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                $4,251
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-iAKWXU dVBxey"
          data-testid="balance-group-other-assets"
        >
          <div
            class="sc-bdvvtL cPSxPD"
          >
            <p
              class="sc-gsDKAQ dLMLA-d"
            >
              Other assets
            </p>
            <span
              appearance="4"
              class="sc-hKwDye emcqkd"
            >
              $53,000
            </span>
          </div>
          <div
            class="sc-hiCibw jktFQO"
          >
            <div
              class="sc-gWXbKe cgurVW"
            >
              <div
                class="sc-cidDSM ccUmfv"
              >
                vehicle
              </div>
              <span
                class="sc-jcFjpl jLBuyl"
              >
                $38,500
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/asset/2022 Toyota RAV4"
                >
                  2022 Toyota RAV4
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Asset
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                $38,500
              </span>
            </div>
          </div>
          <div
            class="sc-hiCibw jktFQO"
          >
            <div
              class="sc-gWXbKe cgurVW"
            >
              <div
                class="sc-cidDSM ccUmfv"
              >
                collectible
              </div>
              <span
                class="sc-jcFjpl jLBuyl"
              >
                $14,500
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/asset/Pokemon Card Collection"
                >
                  Pokemon Card Collection
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Asset
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                $14,500
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`Balance sheet tests Balance sheet page displays the correct data 2`] = `
<div
  class="sc-iqseJM krxsxy"
  data-testid="scrollview-balance-sheet"
>
  <header
    class="sc-crHmcD chJYcV"
  >
    <div
      class="sc-fFeiMQ fIMGLX"
    >
      <div
        class="sc-egiyK hGPUxh"
      >
        <h1
          class="sc-bqiRlB dMSeEr"
          title="Balance sheet"
        >
          Balance sheet
        </h1>
      </div>
      <nav>
        <div
          class="sc-ikJyIC eZSpvY"
        >
          <button
            class="sc-kLwhqv kKDXNw"
            type="button"
          >
            Add new
          </button>
          <button
            class="sc-kLwhqv kKDXNw"
            type="button"
          >
            Import
          </button>
        </div>
      </nav>
    </div>
  </header>
  <main
    class="sc-hBUSln VoEdK"
  >
    <div
      class="sc-eCImPb kAAJDj"
    >
      <header
        class="sc-jRQBWg gVqNsd"
      >
        <h2
          class="sc-gKclnd NOdWh"
        >
          Balances
        </h2>
        <div>
          <nav
            class="sc-iCfMLu bwqJIX"
          >
            <div
              class="sc-furwcr nEOmy"
            >
              all 
            </div>
            <div
              class="sc-furwcr bbwRoh"
            >
              accounts 7
            </div>
            <div
              class="sc-furwcr nEOmy"
            >
              assets 6
            </div>
          </nav>
        </div>
      </header>
      <div
        class="sc-efQSVx cUhjik"
      >
        <div
          class="sc-iAKWXU dVBxey"
          data-testid="balance-group-cash"
        >
          <div
            class="sc-bdvvtL gvuwTi"
          >
            <p
              class="sc-gsDKAQ dLMLA-d"
            >
              Cash
            </p>
            <span
              appearance="1"
              class="sc-hKwDye emcqkd"
            >
              $10,700
            </span>
          </div>
          <div
            class="sc-hiCibw jktFQO"
          >
            <div
              class="sc-gWXbKe cgurVW"
            >
              <div
                class="sc-cidDSM ccUmfv"
              >
                savings
              </div>
              <span
                class="sc-jcFjpl jLBuyl"
              >
                $6,000
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/account/Emergency Fund"
                >
                  Emergency Fund
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                $6,000
              </span>
            </div>
          </div>
          <div
            class="sc-hiCibw jktFQO"
          >
            <div
              class="sc-gWXbKe cgurVW"
            >
              <div
                class="sc-cidDSM ccUmfv"
              >
                checking
              </div>
              <span
                class="sc-jcFjpl jLBuyl"
              >
                $3,400
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/account/Alice's Checking"
                >
                  Alice's Checking
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                $3,400
              </span>
            </div>
          </div>
          <div
            class="sc-hiCibw jktFQO"
          >
            <div
              class="sc-gWXbKe cgurVW"
            >
              <div
                class="sc-cidDSM ccUmfv"
              >
                cash
              </div>
              <span
                class="sc-jcFjpl jLBuyl"
              >
                $1,300
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/account/Wallet"
                >
                  Wallet
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                $1,300
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-iAKWXU dVBxey"
          data-testid="balance-group-debt"
        >
          <div
            class="sc-bdvvtL gLywDe"
          >
            <p
              class="sc-gsDKAQ dLMLA-d"
            >
              Debt
            </p>
            <span
              appearance="2"
              class="sc-hKwDye emcqkd"
            >
              -$21,974
            </span>
          </div>
          <div
            class="sc-hiCibw jktFQO"
          >
            <div
              class="sc-gWXbKe cgurVW"
            >
              <div
                class="sc-cidDSM ccUmfv"
              >
                credit card
              </div>
              <span
                class="sc-jcFjpl jLBuyl"
              >
                -$724
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/account/Bob's Juggernaut Visa"
                >
                  Bob's Juggernaut Visa
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                -$724
              </span>
            </div>
          </div>
          <div
            class="sc-hiCibw jktFQO"
          >
            <div
              class="sc-gWXbKe cgurVW"
            >
              <div
                class="sc-cidDSM ccUmfv"
              >
                auto
              </div>
              <span
                class="sc-jcFjpl jLBuyl"
              >
                -$21,250
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/account/Toyota Auto Loan"
                >
                  Toyota Auto Loan
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                -$21,250
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-iAKWXU dVBxey"
          data-testid="balance-group-investments"
        >
          <div
            class="sc-bdvvtL hRryZV"
          >
            <p
              class="sc-gsDKAQ dLMLA-d"
            >
              Investments
            </p>
            <span
              appearance="3"
              class="sc-hKwDye emcqkd"
            >
              $22,786
            </span>
          </div>
          <div
            class="sc-hiCibw jktFQO"
          >
            <div
              class="sc-gWXbKe cgurVW"
            >
              <div
                class="sc-cidDSM ccUmfv"
              >
                roth
              </div>
              <span
                class="sc-jcFjpl jLBuyl"
              >
                $18,536
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/account/Alice's Roth IRA"
                >
                  Alice's Roth IRA
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                $18,536
              </span>
            </div>
          </div>
          <div
            class="sc-hiCibw jktFQO"
          >
            <div
              class="sc-gWXbKe cgurVW"
            >
              <div
                class="sc-cidDSM ccUmfv"
              >
                401k
              </div>
              <span
                class="sc-jcFjpl jLBuyl"
              >
                $4,251
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/account/Bob's 401k"
                >
                  Bob's 401k
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                $4,251
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-iAKWXU dVBxey"
          data-testid="balance-group-other-assets"
        >
          <div
            class="sc-bdvvtL cPSxPD"
          >
            <p
              class="sc-gsDKAQ dLMLA-d"
            >
              Other assets
            </p>
            <span
              appearance="4"
              class="sc-hKwDye emcqkd"
            >
              $0
            </span>
          </div>
          <div
            class="sc-ezbkAF igaVSX"
          >
            No balances are available in this group
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`Balance sheet tests Balance sheet page displays the correct data 3`] = `
<div
  class="sc-iqseJM krxsxy"
  data-testid="scrollview-balance-sheet"
>
  <header
    class="sc-crHmcD chJYcV"
  >
    <div
      class="sc-fFeiMQ fIMGLX"
    >
      <div
        class="sc-egiyK hGPUxh"
      >
        <h1
          class="sc-bqiRlB dMSeEr"
          title="Balance sheet"
        >
          Balance sheet
        </h1>
      </div>
      <nav>
        <div
          class="sc-ikJyIC eZSpvY"
        >
          <button
            class="sc-kLwhqv kKDXNw"
            type="button"
          >
            Add new
          </button>
          <button
            class="sc-kLwhqv kKDXNw"
            type="button"
          >
            Import
          </button>
        </div>
      </nav>
    </div>
  </header>
  <main
    class="sc-hBUSln VoEdK"
  >
    <div
      class="sc-eCImPb kAAJDj"
    >
      <header
        class="sc-jRQBWg gVqNsd"
      >
        <h2
          class="sc-gKclnd NOdWh"
        >
          Balances
        </h2>
        <div>
          <nav
            class="sc-iCfMLu bwqJIX"
          >
            <div
              class="sc-furwcr nEOmy"
            >
              all 
            </div>
            <div
              class="sc-furwcr nEOmy"
            >
              accounts 7
            </div>
            <div
              class="sc-furwcr bbwRoh"
            >
              assets 6
            </div>
          </nav>
        </div>
      </header>
      <div
        class="sc-efQSVx cUhjik"
      >
        <div
          class="sc-iAKWXU dVBxey"
          data-testid="balance-group-cash"
        >
          <div
            class="sc-bdvvtL gvuwTi"
          >
            <p
              class="sc-gsDKAQ dLMLA-d"
            >
              Cash
            </p>
            <span
              appearance="1"
              class="sc-hKwDye emcqkd"
            >
              $0
            </span>
          </div>
          <div
            class="sc-ezbkAF igaVSX"
          >
            No balances are available in this group
          </div>
        </div>
        <div
          class="sc-iAKWXU dVBxey"
          data-testid="balance-group-debt"
        >
          <div
            class="sc-bdvvtL gLywDe"
          >
            <p
              class="sc-gsDKAQ dLMLA-d"
            >
              Debt
            </p>
            <span
              appearance="2"
              class="sc-hKwDye emcqkd"
            >
              $0
            </span>
          </div>
          <div
            class="sc-ezbkAF igaVSX"
          >
            No balances are available in this group
          </div>
        </div>
        <div
          class="sc-iAKWXU dVBxey"
          data-testid="balance-group-investments"
        >
          <div
            class="sc-bdvvtL hRryZV"
          >
            <p
              class="sc-gsDKAQ dLMLA-d"
            >
              Investments
            </p>
            <span
              appearance="3"
              class="sc-hKwDye emcqkd"
            >
              $120,045
            </span>
          </div>
          <div
            class="sc-hiCibw jktFQO"
          >
            <div
              class="sc-gWXbKe cgurVW"
            >
              <div
                class="sc-cidDSM ccUmfv"
              >
                cryptocurrency
              </div>
              <span
                class="sc-jcFjpl jLBuyl"
              >
                $86,920
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/asset/Bitcoin"
                >
                  Bitcoin
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Asset
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                $69,420
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/asset/Ethereum"
                >
                  Ethereum
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Asset
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                $17,500
              </span>
            </div>
          </div>
          <div
            class="sc-hiCibw jktFQO"
          >
            <div
              class="sc-gWXbKe cgurVW"
            >
              <div
                class="sc-cidDSM ccUmfv"
              >
                security
              </div>
              <span
                class="sc-jcFjpl jLBuyl"
              >
                $33,125
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/asset/Tesla"
                >
                  Tesla
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Asset
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                $30,000
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/asset/GameStop"
                >
                  GameStop
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Asset
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                $3,125
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-iAKWXU dVBxey"
          data-testid="balance-group-other-assets"
        >
          <div
            class="sc-bdvvtL cPSxPD"
          >
            <p
              class="sc-gsDKAQ dLMLA-d"
            >
              Other assets
            </p>
            <span
              appearance="4"
              class="sc-hKwDye emcqkd"
            >
              $53,000
            </span>
          </div>
          <div
            class="sc-hiCibw jktFQO"
          >
            <div
              class="sc-gWXbKe cgurVW"
            >
              <div
                class="sc-cidDSM ccUmfv"
              >
                vehicle
              </div>
              <span
                class="sc-jcFjpl jLBuyl"
              >
                $38,500
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/asset/2022 Toyota RAV4"
                >
                  2022 Toyota RAV4
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Asset
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                $38,500
              </span>
            </div>
          </div>
          <div
            class="sc-hiCibw jktFQO"
          >
            <div
              class="sc-gWXbKe cgurVW"
            >
              <div
                class="sc-cidDSM ccUmfv"
              >
                collectible
              </div>
              <span
                class="sc-jcFjpl jLBuyl"
              >
                $14,500
              </span>
            </div>
            <div
              class="sc-cCcXHH hVgZl"
            >
              <div>
                <a
                  class="sc-jJoQJp ilCmOc"
                  href="#/asset/Pokemon Card Collection"
                >
                  Pokemon Card Collection
                </a>
                <div
                  class="sc-iUKqMP gmlXoT"
                >
                  Asset
                </div>
              </div>
              <span
                class="sc-caiLqq Ihpmn"
              >
                $14,500
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;
